working on html backbone

--- a/index.html
+++ b/index.html
@@ -2,9 +2,57 @@
 <html>
     <head>
         <meta charset="utf-8">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="styles.css">
+        <title>Sabrina Portfolio</title>
     </head>
     <body>
-        <p>Let's go baby</p>
+        <div id="header">
+            <h1>From</h1>
+            <h2>flounder</h2>
+            <h1>to</h1>
+            <h3>flexbox</h3>
+        </div>
+        <div id="intro">
+            <p>Hi! I'm Sabrina, a </p>
+            <h1>designer</h1>
+            <p> with a background in marine biology and informal education.</p>
+            <div id="intro-button">
+                <a>Let's tell a story together</a>
+            </div>
+        </div>
+        <div id="projects">
+            <p>I've done some projects like...</p>
+            <p>make a coloring book for WILDCOAST,</p>
+            <p>design posters for Birch Aquarium</p>
+            <p>and design webpages and webapps!</p>
+            <p>(including developing the website you're on right now!)</p>
+        </div>
+        <div id="extra">
+            <p>Check out more of my work here:</p>
+            <ul>
+                <li>UI/UX case studies, designs, illustrations</li>
+                <li>100 Day Project</li>
+                <li>Coding Projects</li>
+            </ul>
+        </div>
+        <div id="contact">
+            <h1>Ready to tell a story together?</h1>
+            <div id="message">
+                <form action="mailto:sabrinap709@gmail.com" method="post" enctype="text/plain">
+                    Name:<br>
+                    <input type='text' name="name"><br>
+                    
+
+
+
+                </form>
+            </div>
+            <p>
+                Or reach out to me on 
+                <a href="https://www.linkedin.com/in/sabrina-phan/">LinkedIn</a>
+            </p>
+        </div>
     </body>
 </html>
