added correct fonts and some sizes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1>designer</h1>
             <p> with a background in marine biology and informal education.</p>
             <div id="intro-button">
-                <a>Let's tell a story together</a>
+                <a href="#contact">Let's tell a story together</a>
             </div>
         </div>
         <div id="projects">
@@ -41,12 +41,11 @@
             <h1>Ready to tell a story together?</h1>
             <div id="message">
                 <form action="mailto:sabrinap709@gmail.com" method="post" enctype="text/plain">
-                    Name:<br>
-                    <input type='text' name="name"><br>
-                    
-
-
-
+                    Name: <input type='text' name="name"><br>
+                    Email: <input type="email" name="email" required><br>
+                    Message: <input type="text" name='message' required><br>
+                    <input type="reset" value="Cancel">
+                    <input type="submit" value="Send">
                 </form>
             </div>
             <p>
