more changes to svg

--- a/index.html
+++ b/index.html
@@ -10,16 +10,31 @@
     <body>
         <div id="header">
             <h1>From</h1>
-            <h2>flounder</h2>
+            <div id="flounder-block">
+                <h2>flounder</h2>
+                <svg width="385" height="178" viewBox="0 0 385 178" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <text x="50" y="50">flounder</text>
+                    <path id="flounder-rec" d="M0 71.9731C0 30.8718 34.792 -1.64282 75.7993 1.13545L314.689 17.3204C346.73 19.4912 373.324 42.8986 379.545 74.4044L383.265 93.2464C391.931 137.132 358.343 178 313.61 178H71C31.7878 178 0 146.212 0 107V71.9731Z" fill="#4E8EBE"/>
+                </svg>
+
+            </div>
             <h1>to</h1>
-            <h3>flexbox</h3>
+            <div id="code-block">
+               
+                <h3>flexbox</h3>
+            </div>
         </div>
         <div id="intro">
-            <p>Hi! I'm Sabrina, a </p>
-            <h1>designer</h1>
-            <p> with a background in marine biology and informal education.</p>
-            <div id="intro-button">
-                <a href="#contact">Let's tell a story together</a>
+            <div id="intro-block">
+                <svg width="1440" height="473" viewBox="0 0 1440 473" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 0H1440V348L-15 473L0 0Z" fill="#FFA686"/>
+                    </svg>
+                <p>Hi! I'm Sabrina, a </p>
+                <h1>designer</h1>
+                <p> with a background in marine biology and informal education.</p>
+                <div id="intro-button">
+                    <a href="#contact">Let's tell a story together</a>
+                </div>
             </div>
         </div>
         <div id="projects">
