added two new sections

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <title>Sabrina Portfolio</title>
     </head>
     <body>
@@ -13,11 +14,8 @@
                 <h1>From</h1>
             </div>
             <div id="flounder-block">
-                <svg id="flounder-box" width="385" height="178" viewBox="0 0 385 178" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path id="flounder-rec" d="M0 71.9731C0 30.8718 34.792 -1.64282 75.7993 1.13545L314.689 17.3204C346.73 19.4912 373.324 42.8986 379.545 74.4044L383.265 93.2464C391.931 137.132 358.343 178 313.61 178H71C31.7878 178 0 146.212 0 107V71.9731Z" fill="#4E8EBE"/>
-                    <text  font-size= "96px" font-family= "La Belle Aurore"
-                    x="40" y="100" fill="white">flounder</text>               
-                </svg>
+                <img src="Rectangle 19.png">
+                <h2>flounder</h2>
             </div>
             <div id="header-second">
                 <h1 >to</h1>
@@ -28,31 +26,48 @@
         </div>
         <div id="intro">
             <div id="intro-block">
-                <svg width=100% height=auto viewBox="0 0 1440 473" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0 0H1440V348L-15 473L0 0Z" fill="#FFA686"/>
-                    </svg>
                 <div id="intro-text">
                     <p>Hi! I'm Sabrina, a <strong>designer</strong> with a background in marine biology and informal education.</p>
-           
                     <div id="intro-button">
                         <a href="#contact">Let's tell a story together</a>
                     </div>
                 </div>
             </div>
         </div>
+
         <div id="projects">
-            <p>I've done some projects like...</p>
-            <p>make a coloring book for WILDCOAST,</p>
-            <p>design posters for Birch Aquarium</p>
-            <p>and design webpages and webapps!</p>
-            <p>(including developing the website you're on right now!)</p>
+            <div id="projects-1">
+                <p>I've done some projects like...</p>
+            </div>
+            <div id="projects-2">
+                <p >make a coloring book for WILDCOAST,</p>
+                <a href="https://www.behance.net/gallery/144157801/Coloring-Book">
+                <img src="wildcoast_009.png">
+                </a>
+            </div> 
+            <div id="projects-3">
+                <p >design posters for Birch Aquarium,</p>
+                <img src="Egg Flyer.png">
+            </div>
+            <div id="projects-4">
+                
+                <p>and design webpages and webapps!<br>(Check out my case study <a href="https://www.behance.net/gallery/145303949/Redu-Helping-Teachers-Remember-Names">here</a>!)</p>
+                <a href="https://www.behance.net/gallery/145303949/Redu-Helping-Teachers-Remember-Names">
+                <img src="iPhone 13 Pro Max - 1.png">
+                <img src="iPhone 13 Pro Max - 2.png">
+                <img src="iPhone 13 Pro Max - 8.png">
+                </a>
+            </div>
+            <div id="projects-5">
+                <p>(including developing the website you're on right now!)</p>
+            </div>
         </div>
         <div id="extra">
             <p>Check out more of my work here:</p>
             <ul>
-                <li>UI/UX case studies, designs, illustrations</li>
-                <li>100 Day Project</li>
-                <li>Coding Projects</li>
+                <a href="https://www.behance.net/phansabrina"><li><i class="fa-brands fa-fw fa-behance"></i>UI/UX case studies, designs, illustrations</li></a>
+                <a href="https://www.instagram.com/gettinsaltywithsabs/"><li><i class="fa-brands fa-fw fa-instagram"></i>100 Day Project</li></a>
+                <a href="https://github.com/tinysabs"><li><i class="fa-brands fa-fw fa-github"></i>Coding Projects</li></a>
             </ul>
         </div>
         <div id="contact">
